--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CatalogConnectionString": "Server=localhost,1433;Database=CatalogDb;User Id=sa;Password=Password123!;TrustServerCertificate=True"
+  }
 }
