--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,26 @@
-version: '3.4'
-
 services:
   catalogdb:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: catalogdb_container
     environment:
       - ACCEPT_EULA=Y
-      - SA_PASSWORD=Password123!
+      - SA_PASSWORD=YourStrong(!)Password
     ports:
       - "1433:1433"
     volumes:
       - sqlvolume:/var/opt/mssql
 
+  orderingdb:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    container_name: orderingdb_container
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=YourStrong(!)Password
+    ports:
+      - "1434:1433"
+    volumes:
+      - ordervolume:/var/opt/mssql
+
 volumes:
   sqlvolume:
+  ordervolume:
