--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: catalogdb_container
     environment:
       - ACCEPT_EULA=Y
-      - SA_PASSWORD=YourStrong(!)Password
+      - SA_PASSWORD=Password123!
     ports:
       - "1433:1433"
     volumes:
@@ -15,7 +15,7 @@ services:
     container_name: orderingdb_container
     environment:
       - ACCEPT_EULA=Y
-      - SA_PASSWORD=YourStrong(!)Password
+      - SA_PASSWORD=Password123!
     ports:
       - "1434:1433"
     volumes:
