--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost,1434;Database=OrderingDb;User Id=sa;Password=Password123!;TrustServerCertificate=True"
+  }
 }
